[package]
name = "enka-rs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["TheSast <27977196+TheSast@users.noreply.github.com>"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.12", default-features = false, features = [
  # "blocking",
  "json",
  "rustls-tls",
] } # TODO: make lib client-agnostic
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }

[features]
default = ["gi"]
full = ["logging", "stateful", "gi"] #, "hsr", "zzz"]
# auto-cache = []
logging = []
stateful = []
gi = []
# hsr = []
# zzz = []

[[example]]
name = "wrapper"
required-features = ["stateful"]
